objects/nFORCE__Resource_Exposure_Event__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Caller_Source__c</fullName>
        <description>The system populates this text field to indicate whether an nCino managed package or an external source initiated the call to resource exposure API. The default value is blank.</description>
        <label>Caller Source</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Class_Type__c</fullName>
        <description>The system populates this text field with the class or cross-package service type or universal resource type that is exposed by the resource exposure API. The default value is blank.</description>
        <label>Class/XPkg/URT Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Class_Xpkg_Type__c</fullName>
        <description>-DEPRECATED- Deprecated field, no longer in use, replaced by Class_Type__c</description>
        <inlineHelpText>-DEPRECATED-</inlineHelpText>
        <label>-D Class/Xpkg Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Executing_User_Hash__c</fullName>
        <description>The system populates this text field with a hash of the UserId of the user that initiated the call to the resource exposure API. The default value is blank.</description>
        <label>Executing User Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Exposure_Type__c</fullName>
        <description>The system populates this text field with the type of resource exposure, such as callable, aura, or remote action. The default value is blank.</description>
        <label>Exposure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Resource Exposure Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Exposure Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>